2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* ExitCodeIsLimitedOnUnixRule.cs
	* FeatureRequiresRootPrivilegeOnUnixRule.cs
	* MonoCompatibilityReviewRule.cs
	* NewLineLiteralRule.cs:
		Updated rules wrt framework changes.

2008-02-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Portability.xml.in: Fix definition for
	FeatureRequiresRootPrivilegeOnUnixRule.

2008-02-03  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Split the checks
	for Process and Ping out of CheckMethod (and please self-test).

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Don't report when 
	analysis the Ping class itself (very special case but useful for 
	Mono itself :)

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ExitCodeIsLimitedOnUnixRule.cs: Use new Location ctors.
	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Use new Location ctors.
	* MonoCompatibilityReviewRule.cs: Use new Location ctors.
	* NewLineLiteralRule.cs: Use new Location ctors.

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ExitCodeIsLimitedOnUnixRule.cs: Rename InspectionResult[s]
	* MonoCompatibilityReviewRule.cs: Change some methods to static.

2007-12-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* ExitCodeIsLimitedOnUnixRule.cs: New. Rule to detect usage of 
	ExitCode (from Main or Environment.ExitCode / Exit) with values too
	big for Unix systems.
	* Gendarme.Rules.Portability.xml.in: Add new rule definition.
	* Makefile.am: Add new rule/tests to the build.

2007-12-29  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: New. Rule that use MoMA definition
	files to report possible incompatibilities with Mono (Andreas Noever)
	* MoMAWebService.cs: New. Wrapper for MoMA web service.
	* Gendarme.Rules.Portability.xml.in: Add new rule definition.
	* Gendarme.Rules.Portability.mdp: Add new rule to the MonoDevelop 
	project file.